correções no repository e implementação do populate
